# queso

./: .env.example  .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: context-window.mdc  context.mdc  frontend-development.mdc  frontend.mdc  rust-development.mdc  server.mdc  typescript.mdc
.github/workflows/: deploy.yml  rust.yml
distribution/: ecs.ts
distribution/ecs/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  config.ts  dns.ts  docker.ts  ecr.ts  ecs.ts  index.ts  package-lock.json  package.json  rds.ts  secrets.ts  types.ts  vpc.ts
distribution/ecs/iam/: Pulumi.yaml  README.md  index.ts
distribution/openid/: Pulumi.openid.yaml  Pulumi.yaml  README.md  index.ts  package.json
queso/: Cargo.toml
queso/queso-cli/: Cargo.toml
queso/queso-cli/src/: main.rs  utils.rs
queso/queso-cli/src/commands/: dev.rs  mod.rs
queso/queso-server/: .env  Cargo.toml
queso/queso-server/migrations/2024-02-16-000000_create_users/: up.sql
queso/queso-server/migrations/2025-02-17-003907_add_oauth_fields/: down.sql  up.sql
queso/queso-server/src/: lib.rs  main.rs  openapi.rs  schema.rs  server.rs
queso/queso-server/src/config/: database.rs
queso/queso-server/src/features/auth/: handler.rs  mod.rs  model.rs  oauth.rs  router.rs  service.rs
queso/queso-server/src/features/users/: handler.rs  mod.rs  model.rs  repository.rs  router.rs  service.rs
queso/queso-ui/: .gitignore  .prettierignore  .prettierrc  bun.lockb  index.html  package.json  playwright.config.ts  vite.config.ts
queso/queso-ui/__tests__/: auth.spec.ts
queso/queso-ui/src/: index.css  main.tsx  routeTree.gen.ts
queso/queso-ui/src/api/: auth.ts  client.ts
queso/queso-ui/src/components/: mode-toggle.tsx
queso/queso-ui/src/components/auth/: auth-form-field.tsx  auth-layout.tsx  social-auth-buttons.tsx
queso/queso-ui/src/config/: env.ts  posthog.ts  sentry.ts
queso/queso-ui/src/hooks/: use-auth.ts  use-current-user.ts
queso/queso-ui/src/routes/: __root.tsx  index.tsx  login.tsx  signup.tsx
queso/queso-ui/src/routes/auth/google/: callback.tsx
queso/queso-ui/src/routes/oauth/: callback.tsx
