[package]
name = "queso-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Queso development CLI"

[[bin]]
name = "queso"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
indicatif = { version = "0.17", features = ["improved_unicode"] }

[dev-dependencies]
mockall = "0.13.1"
