[package]
name = "queso-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
