[package]
name = "queso-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower = { version = "0.5.2", features = ["util"] }
rand = { version = "0.9", features = ["std"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
r2d2 = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = { version = "0.5.3", features = ["std"] }
thiserror = "2.0.11"
hyper = { version = "1.1.0", features = ["full"] }
async-trait = "0.1.77"
git2 = "0.20.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.1.0", features = ["full"] }
testcontainers = { version = "0.23.2" }
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
